--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# virtual environments
+.venv/
+/venv/
+.env
 
 # dependencies
 /node_modules
